# RpcTuner

./: RadioDemo.IAB  RadioDemo.IAD  RadioDemo.IMB  RadioDemo.IMD  RadioDemo.PFI  RadioDemo.PO  RadioDemo.PR  RadioDemo.PRI  RadioDemo.PS  RadioDemo.WK3
APP/INC/: ledapp.h  rpcapp.h  rpcappcommon.h  rpccmdparser.h  rpcmcucallback.h  rpcsocreq.h  tunerapp.h  tunerfunc.h
APP/LED/: ledapp.c
APP/RPC/: rpcapp.c  rpccmdparser.c  rpcmcucallback.c  rpcsocreq.c
APP/TUNER/: tunerapp.c  tunerfunc.c
HARDWARE/KEY/: key.h
HARDWARE/TEA5767/: TEA5767.c  TEA5767.h
SYSTEM/usart/: usart.h
SYSTEM/usart2/: rs485.c  rs485.h
SYSTEM/usart3/: usart3.c  usart3.h
UCOSII/CONFIG/: os_cfg.h
USER/: UCOSII-2.uvguix.Administrator  UCOSII-2.uvguix.Valpha  UCOSII-2.uvoptx  UCOSII-2.uvprojx  main.c
app/: build.gradle
app/src/androidTest/java/com/example/rpctuner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rpc-lib.cpp
app/src/main/cpp/RPCJNI/: RPCJNI.cpp
app/src/main/cpp/RpcApp/: CRpcApp.cpp  CRpcApp.h  CRpcListener.cpp  CRpcListener.h  CRpcProtocol.cpp  CRpcProtocol.h
app/src/main/cpp/RpcApp/ComProxy/: CRpcComProxy.cpp  CRpcComProxy.h  ComWithDriver.cpp  ComWithDriver.h  UartDriver.cpp  UartDriver.h
app/src/main/cpp/TunerApp/: CTunerApp.cpp  CTunerApp.h
app/src/main/cpp/include/: RPC_GLOBAL.h  UserComConfig.h
app/src/main/java/com/example/rpctuner/: Contract.java  JniMessage.java  MainActivity.java  SharedPreferencesUtils.java  SignatureGen.java  (+3 more)
app/src/main/res/layout/: activity_main.xml  fragment_tuner.xml  item_favrlist.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
